--- a/InspiRecipes/css/Styles.css
+++ b/InspiRecipes/css/Styles.css
@@ -18,6 +18,31 @@ body {
     }
 }
 
+/* setting the font size according to the screen size */
+@media (min-width: 950px) {
+    #container {
+        font-size: 115%;
+    }
+}
+
+@media (max-width: 950px) {
+    #container {
+        font-size: 80%;
+    }
+}
+
+@media (max-width: 370px) {
+    #container {
+        font-size: 60%;
+    }
+}
+
+@media (max-width: 250px) {
+    #container {
+        font-size: 45%;
+    }
+}
+
 /* CSS block for desktop */
 @media (min-width: 950px) {
     
