--- a/InspiRecipes/css/Styles.css
+++ b/InspiRecipes/css/Styles.css
@@ -115,6 +115,7 @@ body {
         color:#0b4f05;
         box-shadow: 2px 2px 4px #0b4f05;
         text-shadow: 0px 0.5px 1px #239319e5;
+        cursor: pointer;
     
         background: linear-gradient(to left, #ddefabc9 50%, #ddefab79 50%) right;
         background-size: 200%;
