--- a/InspiRecipes/css/Upload.css
+++ b/InspiRecipes/css/Upload.css
@@ -105,6 +105,7 @@
     color: #ddefab;
     background-color:#1c7e13bb;
     box-shadow: 0px 2px 4px #0b4f056f;
+    cursor: pointer;
 }
 
 #addPhotos {
