main page articles

--- a/InspiRecipes/css/MainPage.css
+++ b/InspiRecipes/css/MainPage.css
@@ -12,7 +12,6 @@
             "findIns inspire"
             "articles articles";
         grid-template-columns: 50% 50%;
-        padding: 4%;
     }
 
     #recipePictures {
@@ -23,8 +22,8 @@
         width: 13%;
     }    
 
-    #articlesPic img {
-        width: 23%;
+    #articleItem {
+        width: 19%;
     }
 }
 
@@ -43,7 +42,6 @@
             "inspire"
             "articles";
         grid-template-columns: 100%;
-        padding: 4%;
     }
 
     #recipePictures {
@@ -59,15 +57,19 @@
         width: 18%;
     }
 
-    #articlesPic img {
-        width: 48%;
+    #articleItem {
+        width: 44%;
     }
+}
+
+#app {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #002902;
 }
 
 #container {
     display: grid;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #002902;
+    padding: 4%;
 }
 
 #welcome {
@@ -118,12 +120,49 @@
     grid-area: articles;
 }
 
-#articlesPic {
+#articleItems {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
+#articleItem {
+    background-color: #00290236;
+    border-color: #002902c5;
+    border-radius: 7px;
+    border-style: solid;
+    border-width: thin;
+    padding: 0% 2%;
+    margin-bottom: 3%;
+}
+
+#articleItem img {
+    width: 100%;
+}
+
+#articleItem p {
+    font-size: 90%;
+}
+
 p {
     font-size: 110%;
+}
+
+#showArticle {
+    padding: 4%;
+}
+
+#showArticle img {
+    width: 100%;
+}
+
+#showArticle p {
+    font-size: 120%;
+}
+
+#showArticle button {
+    background-color: #e5f7bff9;
+    border-width: thin;
+    border-radius: 3px;
+    padding: 0.5% 1%;
 }
