--- a/InspiRecipes/css/Faq.css
+++ b/InspiRecipes/css/Faq.css
@@ -1,3 +1,5 @@
+/* CSS file styling the FAQ page */
+
 #container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #002902;
