--- a/InspiRecipes/css/Recipes.css
+++ b/InspiRecipes/css/Recipes.css
@@ -1,3 +1,5 @@
+/* CSS file styling the recipes page */
+
 #container {
     display: grid;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
