--- a/InspiRecipes/css/Upload.css
+++ b/InspiRecipes/css/Upload.css
@@ -1,3 +1,5 @@
+/* CSS file styling the upload form on the recipes page */
+
 #form {
     display: grid;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
